<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OHDMAndroidEditor</string>
    <string name="app_name_short">OHDMAE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_locate">Locate</string>
    <string name="locate_position">locate position</string>
    <string name="start_track">start track</string>
    <string name="stop_track">stop track</string>
    <string name="action_edit">Edit</string>
    <string name="action_add">Add</string>
    <string name="action_sync">Sync</string>
    <string name="item_add_point">add point</string>
    <string name="item_add_line">add line</string>
    <string name="item_add_polygon">add polygon</string>
    <string name="item_edit_item">edit item</string>
    <string name="item_layer_osm">OSM Layer</string>
    <string name="item_layer_ohdm">OHDM Layer</string>
    <string name="item_get_polyobjectbyid">Get Polyobject by ID</string>
    <string name="action_time">Choose Time-Layer</string>
    <string name="button_add_accept">accept</string>
    <string name="button_add_undo">undo</string>
    <string name="button_add_cancel">cancel</string>
    <string name="button_edit_delete">delete</string>
    <string name="button_add_data">object data</string>
    <string name="dialog_name">cancel</string>
    <string name="dialog_edittext">ID of Polyobject</string>
    <string name="no_real_id_error">sorry, but the ID of Polyobject was not correct</string>
    <string name="async_download_error_server">sorry, but the object could not be loaded (server error)</string>
    <string name="async_download_error">sorry, but the object could not be loaded (intern error)</string>
    <string name="async_download_done">object is loaded!</string>
    <string name="async_download_start">loading Object...</string>
    <string name="async_upload_error">sorry, but the object could not be uploaded</string>
    <string name="async_upload_done">object successfully uploaded!</string>
    <string name="async_upload_start">uploading Object...</string>
    <string name="map_location_error">location error</string>
    <string name="location_service_started">location service started</string>
    <string name="title_activity_edit_poly_object_data">Edit data</string>
    <string name="edit_polyobject_data_key">key</string>
    <string name="edit_polyobject_data_value">value</string>
    <string name="not_implemented">not implemented yet</string>
    <string name="no_edit_point_selected_error">no edit-point selected</string>
    <string name="no_area_selected_error">no area selected</string>
    <string name="title_activity_poly_objets_overview">PolyObjetsOverviewActivity</string>
    <string name="title_activity_get_near_poly_objects">Get near PolyObjects</string>
    <string name="title_activity_dialog_validdatepicker">Pick Date</string>
    <string name="add_attr_button">add Attribute</string>

</resources>
