<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- add an ite -->
    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_add"
        android:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menuItemAddPoint"
                android:title="@string/item_add_point" />
            <item
                android:id="@+id/menuItemAddLine"
                android:title="@string/item_add_line" />
            <item
                android:id="@+id/menuItemAddPolygon"
                android:title="@string/item_add_polygon" />
        </menu>
    </item>

    <!-- edit a item-->
    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_edit"
        android:showAsAction="ifRoom">
    </item>

    <!-- Locate -->
    <item android:id="@+id/action_locate"
        android:icon="@drawable/ic_action_locate"
        android:title="@string/action_locate"
        android:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menuItemLocate"
                android:title="@string/locate_position" />
            <item
                android:id="@+id/menuItemStartTrack"
                android:title="@string/start_track" />
            <item
                android:id="@+id/menuItemStopTrack"
                android:title="@string/stop_track" />
        </menu>
    </item>

    <!-- select the time layer -->
    <item android:id="@+id/action_sync"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_sync"
        android:showAsAction="ifRoom">
    </item>

    <!-- select the time layer -->
    <item android:id="@+id/action_time"
        android:icon="@drawable/ic_action_map"
        android:title="@string/action_time"
        android:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menuItemLayerOSM"
                android:title="@string/item_layer_osm" />
            <item
                android:id="@+id/menuItemLayerOHDM"
                android:title="@string/item_layer_ohdm" />
        </menu>
     </item>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never" />

    <!-- Get an PolyObject form Server by ID -->
    <item android:id="@+id/action_getpolyobjectbyid"
        android:title="@string/item_get_polyobjectbyid"
        android:showAsAction="never" />
</menu>
